the code modified

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL= http://localhost:5000/api
-REACT_APP_ENDPOINT= http://localhost:5000
+REACT_APP_API_URL= https://chatappapi-pkmj.onrender.com/api
+REACT_APP_ENDPOINT= https://chatappapi-pkmj.onrender.com
+
