--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chatapp",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://chatappapi-pkmj.onrender.com",
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
